Add 2 Admin IDs: Each admin panel has unique ID (admin_panel_1, admin_panel_2)

--- a/admin_login.html
+++ b/admin_login.html
@@ -209,8 +209,9 @@
         </div>
 
         <div class="info-box">
-            <strong>💡 Test Admin:</strong><br>
-            Telefon: +998901234567
+            <strong>💡 Test Adminlar:</strong><br>
+            Admin Panel 1: +998901234567<br>
+            Admin Panel 2: +998901234568
         </div>
     </div>
 
