--- a/admin_panel_driver_registration.html
+++ b/admin_panel_driver_registration.html
@@ -410,6 +410,9 @@
         <div class="header">
             <h1>🚗 Haydovchi Ro'yxatga Olish</h1>
             <p>Yangi haydovchilari tizimga qo'shing</p>
+            <p style="font-size: 0.9em; margin-top: 10px; opacity: 0.8;">
+                📌 Admin 1: +998901234567 | Admin 2: +998901234568
+            </p>
         </div>
 
         <div id="alertContainer"></div>
