--- a/admin_login.html
+++ b/admin_login.html
@@ -275,5 +275,14 @@
             window.location.href = 'admin_panel_driver_registration.html';
         }
     </script>
+    <!-- PREMIUM SCRIPTS -->
+    <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
+    <script src="admin.js"></script>
+    <script>
+        console.log('✅ Admin Panel v2.0 - Premium Edition loaded');
+        // Initialize admin app
+        adminApp.attachAdminListeners();
+    </script>
 </body>
 </html>
