--- a/customer.html
+++ b/customer.html
@@ -336,6 +336,16 @@
         </div>
     </div>
     
+    <!-- PREMIUM SCRIPTS -->
+    <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
     <script src="customer.js"></script>
+    <script>
+        console.log('✅ Customer App v2.0 - Premium Edition loaded');
+        // Initialize customer app
+        customerApp.attachCustomerListeners();
+        customerApp.renderStats();
+        customerApp.renderOrderHistory();
+    </script>
 </body>
 </html>
