--- a/driver_login.html
+++ b/driver_login.html
@@ -371,5 +371,12 @@
             window.location.href = 'driver_pro.html';
         }
     </script>
+    <!-- PREMIUM SCRIPTS -->
+    <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
+    <script src="driver.js"></script>
+    <script>
+        console.log('✅ Driver Login v2.0 - Premium Edition loaded');
+    </script>
 </body>
 </html>
