--- a/driver_pro.html
+++ b/driver_pro.html
@@ -931,5 +931,14 @@
         loadOrders();
         setInterval(loadOrders, 10000);
     </script>
+    <!-- PREMIUM SCRIPTS -->
+    <script src="app.js"></script>
+    <script src="driver.js"></script>
+    <script>
+        console.log('✅ Driver Pro App v2.0 - Premium Edition loaded');
+        // Initialize driver app
+        driverApp.attachDriverListeners();
+        driverApp.renderOrders();
+    </script>
 </body>
 </html>
