--- a/admin_panel_driver_registration.html
+++ b/admin_panel_driver_registration.html
@@ -604,5 +604,15 @@
         loadDrivers();
         setInterval(loadDrivers, 10000);
     </script>
+    <!-- PREMIUM SCRIPTS -->
+    <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
+    <script src="admin.js"></script>
+    <script>
+        console.log('✅ Admin Driver Registration Panel v2.0 loaded');
+        // Initialize admin driver management
+        adminApp.renderDrivers();
+        adminApp.attachAdminListeners();
+    </script>
 </body>
 </html>
